added no-javascript fallback

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <div id="content">
             <div id="sections-switch"></div>
-            <div id="sections-wrapper">
+            <div id="sections-wrapper" class="no-js">
                 <div id="section-empathy" class="section">
                     <div class="section-intro">
                         <h1 id="name">MSAMIMJ</h1>
