added dummy content and content styling with description

--- a/index.html
+++ b/index.html
@@ -5,23 +5,63 @@
     </head>
     <body>
         <div id="content">
-            <div id="sections-switch"></div>
+            <div id="sections-switch-wrapper">
+                <div class="sections-switch-section enabled"></div>
+                <div class="sections-switch-section"></div>
+            </div>
             <div id="sections-wrapper" class="no-js">
                 <div id="section-empathy" class="section">
                     <div class="section-intro">
-                        <h1 id="name">MSAMIMJ</h1>
+                        <p id="name">Samim Jahin</p>
                         <div id="bio">Admiring nature and empathizing with living beings through art</div>
                     </div>
-                    <div class="section-content">
-                        x
+                    <div class="items">
+                        <div class="item">
+                            <p class="header">Reclamation</p>
+                            <div class="content">
+                                <img src="assets/images/reclamation.png"/>
+                                <p class="description">
+                                    This is the year 2022. I found a time machine and used it to travel a few centuries into the future. When I arrived, I quickly realised that by then human beings had gone extinct. I stood there, dumfounded, not knowing what to do. About an hour later, I was somehow back to my senses and remembered that I was in the process of building a huge monument when I had found the time machine. I wanted to go see if I ever completed building it and if it was still intact. It was huge skull that I was building with the strongest metal known to man. I was constructing it to celebrate the human race, to celebrate how far we have evolved and became the top species on this planet.
+                                    <br/>
+                                    I reached that place where the structure was planned to be installed and found it. But it was now covered with grass and flowers, slowly decaying. In that moment I realised a few things. I realised how all the things we build only exist if we constantly protect them. The very instant we stop, nature finds a way to assimilate it. I realised how nature breaks down everything we build, to reclaim what it owns, to bring back the balance we destroyed in the first place, with every new structure that we built.
+                                    <br/>
+                                    There was a lot to process and I was not sure what to make of it. But one thing I knew in that moment was that we need to be humble. We need to realise that we are not as important as we often think of ourselves to be. We exist only if we consciously do our best to not destroy the balance of nature. I think I will now go back and just stop building this monument. Maybe that will disrupt the flow of time, I don't know. But I think I will do that anyway.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <p class="header">Bed of Thorns</p>
+                            <div class="content">
+                                <img src="assets/images/timb2.1.png"/>
+                                <p class="description">
+                                    This is the year 2022. I found a time machine and used it to travel a few centuries into the future. When I arrived, I quickly realised that by then human beings had gone extinct. I stood there, dumfounded, not knowing what to do. About an hour later, I was somehow back to my senses and remembered that I was in the process of building a huge monument when I had found the time machine. I wanted to go see if I ever completed building it and if it was still intact. It was huge skull that I was building with the strongest metal known to man. I was constructing it to celebrate the human race, to celebrate how far we have evolved and became the top species on this planet.
+                                    <br/>
+                                    I reached that place where the structure was planned to be installed and found it. But it was now covered with grass and flowers, slowly decaying. In that moment I realised a few things. I realised how all the things we build only exist if we constantly protect them. The very instant we stop, nature finds a way to assimilate it. I realised how nature breaks down everything we build, to reclaim what it owns, to bring back the balance we destroyed in the first place, with every new structure that we built.
+                                    <br/>
+                                    There was a lot to process and I was not sure what to make of it. But one thing I knew in that moment was that we need to be humble. We need to realise that we are not as important as we often think of ourselves to be. We exist only if we consciously do our best to not destroy the balance of nature. I think I will now go back and just stop building this monument. Maybe that will disrupt the flow of time, I don't know. But I think I will do that anyway.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <p class="header">Bed of Thorns</p>
+                            <div class="content">
+                                <img src="assets/images/reclamation.png"/>
+                                <p class="description">
+                                    This is the year 2022. I found a time machine and used it to travel a few centuries into the future. When I arrived, I quickly realised that by then human beings had gone extinct. I stood there, dumfounded, not knowing what to do. About an hour later, I was somehow back to my senses and remembered that I was in the process of building a huge monument when I had found the time machine. I wanted to go see if I ever completed building it and if it was still intact. It was huge skull that I was building with the strongest metal known to man. I was constructing it to celebrate the human race, to celebrate how far we have evolved and became the top species on this planet.
+                                    <br/>
+                                    I reached that place where the structure was planned to be installed and found it. But it was now covered with grass and flowers, slowly decaying. In that moment I realised a few things. I realised how all the things we build only exist if we constantly protect them. The very instant we stop, nature finds a way to assimilate it. I realised how nature breaks down everything we build, to reclaim what it owns, to bring back the balance we destroyed in the first place, with every new structure that we built.
+                                    <br/>
+                                    There was a lot to process and I was not sure what to make of it. But one thing I knew in that moment was that we need to be humble. We need to realise that we are not as important as we often think of ourselves to be. We exist only if we consciously do our best to not destroy the balance of nature. I think I will now go back and just stop building this monument. Maybe that will disrupt the flow of time, I don't know. But I think I will do that anyway.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div id="section-pop" class="section">
                     <div class="section-intro">
-                        <h1 id="name">MSAMIMJ</h1>
+                        <p id="name">Samim Jahin</p>
                         <div id="bio">Celebrating cultural diversity and motorcycles through Pop Art</div>
                     </div>
-                    Section2
                 </div>
             </div>
         </div>
